--- a/src/gui2/userinterface.ui
+++ b/src/gui2/userinterface.ui
@@ -65,7 +65,7 @@
      </spacer>
     </item>
     <item row="6" column="3">
-     <widget class="QGroupBox" name="groupBox_2">
+     <widget class="QGroupBox" name="memoryOperationsGroup">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>1</horstretch>
@@ -134,7 +134,10 @@
      </widget>
     </item>
     <item row="6" column="1">
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="diskOperationsGroup">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>1</horstretch>
