--- a/src/gui2/frame.ui
+++ b/src/gui2/frame.ui
@@ -576,6 +576,9 @@
                  <property name="text">
                   <string>Built-in</string>
                  </property>
+                 <attribute name="buttonGroup">
+                  <string notr="true">formatButtonGroup</string>
+                 </attribute>
                 </widget>
                </item>
                <item row="1" column="1">
@@ -586,6 +589,9 @@
                  <property name="text">
                   <string>From file</string>
                  </property>
+                 <attribute name="buttonGroup">
+                  <string notr="true">formatButtonGroup</string>
+                 </attribute>
                 </widget>
                </item>
                <item row="0" column="0">
@@ -794,4 +800,7 @@
   <include location="resources.qrc"/>
  </resources>
  <connections/>
+ <buttongroups>
+  <buttongroup name="formatButtonGroup"/>
+ </buttongroups>
 </ui>
