--- a/src/gui2/imager.ui
+++ b/src/gui2/imager.ui
@@ -155,9 +155,9 @@ background: white;
        <number>0</number>
       </property>
       <item row="0" column="1">
-       <widget class="QPushButton" name="loadFluxButton">
+       <widget class="QPushButton" name="loadImageButton">
         <property name="text">
-         <string>Load from file</string>
+         <string>Load image</string>
         </property>
         <property name="icon">
          <iconset theme="document-open"/>
@@ -185,9 +185,9 @@ background: white;
        </widget>
       </item>
       <item row="0" column="3">
-       <widget class="QPushButton" name="saveFluxButton">
+       <widget class="QPushButton" name="saveImageButton">
         <property name="text">
-         <string>Save to file</string>
+         <string>Save image</string>
         </property>
         <property name="icon">
          <iconset theme="document-save"/>
