--- a/src/gui2/imager.ui
+++ b/src/gui2/imager.ui
@@ -40,61 +40,6 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,0">
-         <item>
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>Contrast:</string>
-           </property>
-           <property name="buddy">
-            <cstring>commandButtonFrame</cstring>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QSlider" name="fluxContrastSlider">
-           <property name="minimum">
-            <number>50</number>
-           </property>
-           <property name="maximum">
-            <number>999</number>
-           </property>
-           <property name="value">
-            <number>100</number>
-           </property>
-           <property name="orientation">
-            <enum>Qt::Orientation::Horizontal</enum>
-           </property>
-           <property name="invertedAppearance">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="fluxSideComboBox">
-           <property name="currentIndex">
-            <number>2</number>
-           </property>
-           <item>
-            <property name="text">
-             <string>Side 0</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Side 1</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>Both sides</string>
-            </property>
-           </item>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
         <widget class="QScrollArea" name="scrollArea">
          <property name="widgetResizable">
           <bool>true</bool>
@@ -105,7 +50,7 @@
             <x>0</x>
             <y>0</y>
             <width>460</width>
-            <height>109</height>
+            <height>149</height>
            </rect>
           </property>
           <property name="sizePolicy">
@@ -135,7 +80,20 @@ background: white;
              <property name="frameShadow">
               <enum>QFrame::Shadow::Sunken</enum>
              </property>
-             <layout class="QVBoxLayout" name="verticalLayout_12"/>
+             <layout class="QVBoxLayout" name="verticalLayout_12">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+             </layout>
             </widget>
            </item>
           </layout>
